[package]
name = "wasm_cardioid"
version = "0.1.0"
authors = ["Alexandre-Borghi <borghi.alexandre.12@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.9"
console_error_panic_hook = "=0.1.6"
lazy_static = "1.4.0"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"
wasm-bindgen = "0.2.69"

[dependencies.web-sys]
version = "0.3.46"
features = [
	"console",
	"Window",
	"Document",
	"HtmlElement",
	"HtmlBodyElement",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
]